[gd_scene load_steps=2 format=3 uid="uid://bd5tj7whc0hvk"]

[ext_resource type="Script" path="res://Scenes/Levels/powerup_spawner.gd" id="1_3bo5c"]

[node name="PowerupSpawner" type="Node2D"]
script = ExtResource("1_3bo5c")

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Items" type="Node" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
